# TDengine

cmake/: cmake.define  cmake.install  cmake.options
examples/c/: CMakeLists.txt
include/dnode/mgmt/: dnode.h
source/client/: CMakeLists.txt
source/client/src/: clientEnv.c
source/common/src/: tglobal.c
source/dnode/mgmt/: CMakeLists.txt
source/dnode/mgmt/exe/: dmMain.c
source/dnode/mgmt/node_mgmt/inc/: dmMgmt.h
source/dnode/mgmt/node_mgmt/src/: dmEnv.c  dmNodes.c
source/dnode/mgmt/node_util/: CMakeLists.txt
source/dnode/mgmt/test/sut/src/: server.cpp
source/dnode/vnode/src/inc/: meta.h
source/libs/function/: CMakeLists.txt
source/libs/function/src/: builtinsimpl.c  tudf.c
source/util/src/: tlog.c  tworker.c
tests/script/: test.sh
tests/script/sh/: exec.sh
tests/script/tsim/db/: basic1.sim
utils/: CMakeLists.txt
utils/tsim/: CMakeLists.txt
utils/tsim/src/: simExe.c  simSystem.c
